<resources>
    <string name="app_name">Jummum</string>
    <string name="loading">กำลังโหลด...</string>
    <string name="username_lb">Email</string>
    <string name="password_lb">Password</string>
    <string name="remember">จำฉันไว้ในระบบ</string>
    <string name="register">ลงทะเบียน</string>
    <string name="forgetPassword">ลืมรหัสผ่าน</string>
    <string name="tab_qr">QR Code</string>
    <string name="tab_me">Me</string>
    <string name="scan_qr_table">สแกน QR Code เลขโต๊ะ</string>
    <string name="select_menu">เลือกเมนู</string>
    <string name="cart">รถเข็น</string>
    <string name="search">ค้นหาเมนู</string>
    <string name="confirmOrder">ยืนยันการสั่งอาหาร</string>
    <string name="confirmPayment">ชำระเงิน</string>
    <string name="detailOrder">สรุปรายการที่สั่ง</string>
    <string name="numTable">เลขโต๊ะ</string>
    <string name="save_card">บันทึกบัตรนี้</string>
    <string name="save_card_detial">คุณสามารถลบบัตรใบนี้ได้ที่เมนูโพร์ไฟล์ส่วนตัว</string>
    <string name="label_card_lname">นามสกุล</string>
    <string name="node_desc">ใส่หมายเหตุที่ต้องการแจ้ง...</string>
    <string name="code_promotion">คุณมี voucher code สำหรับร้านนี้</string>
    <string name="payment">ชำระเงิน</string>
    <string name="fnameCard">ชื่อผู้ถือบัตร</string>
    <string name="lnameCard">นามสกุลผู้ถือบัตร</string>
    <string name="history">ประวัติการสั่งอาหาร</string>
    <string name="historyDetial">รายละเอียดการสั่งอาหาร</string>
    <string name="creditcard">บัตรเครดิต/เดบิต</string>
    <string name="termofservice">ข้อกำหนดและเงื่อนไข</string>
    <string name="privacy">นโยบายความเป็นส่วนตัว</string>
    <string name="recommendshop">แนะนำร้านอาหาร</string>
    <string name="codeReward">แสดงโค้ด เพื่อรับสิทธิ์</string>
    <string name="detailReward">แลกของรางวัล</string>
    <string name="myReward">รางวัลของฉัน</string>
    <string name="comment">แนะนำติชม</string>
    <string name="cancelOrder">ยกเลิกบิลนี้</string>
    <string name="disputeOrder">Open dispute</string>
    <string name="contactus">ติดต่อ JUMMUM</string>
    <string name="logout">Log out</string>
    <string name="createUser">สร้างบัญชีใหม่</string>
    <string name="email">อีเมล</string>
    <string name="password">รหัสผ่าน</string>
    <string name="fullname">ชื่อ</string>
    <string name="birthDate">วันเกิด</string>
    <string name="birthDateOptional">วันเกิด (Optional)</string>
    <string name="tel">เบอร์โทร</string>
    <string name="telOptional">เบอร์โทร (Optional)</string>
    <string name="login">Log in</string>
    <string name="forgetPasswordDesc">กรุณาใส่อีเมลที่คุณได้ลงทะเบียนไว้ เราจะส่งอีเมลเพื่อรีเซ็ตรหัสผ่านไปให้คุณ</string>
    <string name="pay_success">ชำระเงินสำเร็จ</string>
    <string name="thankU">ขอบคุณที่ใช้บริการจั้มมั่ม</string>
    <string name="save_picture">บันทึกใบเสร็จลงอัลบั้ม</string>
    <string name="hot_deal">Hot Deal</string>
    <string name="facebook_app_id">1684680414955303</string>
    <string name="fb_login_protocol_scheme">fb1684680414955303</string>
    <string name="profile">ข้อมูลส่วนตัว</string>
    <string name="delete_all">ลบทั้งหมด</string>
    <string name="cancle">ยกเลิก</string>
    <string name="welcome">Welcome</string>
    <string name="numberSecu">เลข 3 หลักที่ด้านหลังบัตรคุณ</string>
    <string name="reward">Reward</string>
    <string name="select_market">เลือกร้าน</string>
    <string name="select_table">เลือกโต๊ะ</string>
    <string name="add_node">เพิ่มโน้ต</string>
    <string name="commit">ยืนยัน</string>
    <string name="textTitleVoucherCode">สั่งอาหาร จำหน่าย Credit card รับส่วนลด 10% ใส่โค้ด 10PERCENTOFF</string>
    <string name="textDescVoucher">ลดสูงสุด 100 บาท/วัน --ทั้งหมด 500 สิทธิ์ จำกัด --10 สิทธิ์/ผู้ใช้ --สำหรับ MAMARIN และ susuhi shin sukhumvit</string>
    <string name="select_voucher_code">เลือก Voucher Code</string>
    <string name="law">ข้อกำหนดและเงื่อนไข</string>
    <string name="searchReward">ค้นหา Reward</string>
    <string name="point">แต้มสะสม</string>
    <string name="remaining_point">แต้มคงเหลือ</string>
    <string name="point_reward">แต้มสะสม/แลกของรางวัล</string>
    <string name="lastName">นามสกุล</string>
    <string name="searchHotdel">ค้นหาโปรโมชั่นร้าน</string>
    <string name="searchMarket">ค้นหาร้าน</string>
    <string name="note">เหตุผล</string>
    <string name="price">จำนวนเงิน</string>
    <string name="title_feature1">Feature 1</string>
    <string name="saveOrderInsertData">QR Code รายการอาหารที่ต้องการสั่ง</string>
    <string name="transfer_dispute">ยืนยันการโอนเงิน</string>
</resources>
