<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_gray">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/barSizeTitlebar"
            android:theme="@style/AppTheme.WithoutActionBar.AppBarOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/status_height"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/back_button_width"
                        android:layout_height="match_parent"
                        android:background="@color/mint"
                        >
                    </LinearLayout>

                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/btn_back"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:background="@color/mint">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="&lt;"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/back_size"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/title_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.WithoutActionBar.TextViewWhite"
                        android:layout_centerVertical="true"
                        android:text="@string/createUser"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_view_size_big"
                        android:layout_centerHorizontal="true"
                        android:textStyle="bold" />


                </RelativeLayout>

            </LinearLayout>


        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding"
            android:padding="@dimen/padding"
            android:background="@color/bg_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/AppTheme.WithoutActionBar.TextViewWhite"
                android:layout_centerVertical="true"
                android:text="ใส่ข้อมูลด้านล่าง แล้วเตรียม มั่ม มั่ม ได้เลย !!"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                style="@style/AppTheme.WithoutActionBar.TextViewBlack"
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@id/txt_password"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:backgroundTint="@color/light_gray"
                />

            <EditText
                style="@style/AppTheme.WithoutActionBar.TextViewBlack"
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:nextFocusForward="@id/txt_full_name"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:backgroundTint="@color/light_gray"/>

            <EditText
                style="@style/AppTheme.WithoutActionBar.TextViewBlack"
                android:id="@+id/txt_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:nextFocusForward="@id/txt_last_name"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:backgroundTint="@color/light_gray"/>

            <EditText
                style="@style/AppTheme.WithoutActionBar.TextViewBlack"
                android:id="@+id/txt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:nextFocusForward="@id/txt_birth"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:backgroundTint="@color/light_gray"/>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp">

                    <EditText
                        style="@style/AppTheme.WithoutActionBar.TextViewBlack"
                        android:id="@+id/txt_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthDateOptional"
                        android:inputType="datetime"
                        android:nextFocusForward="@id/txt_tel"
                        android:paddingLeft="@dimen/padding"
                        android:paddingRight="@dimen/padding"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:descendantFocusability="blocksDescendants"
                        android:backgroundTint="@color/light_gray"/>

                    <Button
                        android:id="@+id/btn_select_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"/>
                </RelativeLayout>


                <Button
                    android:id="@+id/btn_clear_birthday"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/delete"
                    android:visibility="visible"/>

            </FrameLayout>



            <EditText
                style="@style/AppTheme.WithoutActionBar.TextViewBlack"
                android:id="@+id/txt_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telOptional"
                android:inputType="phone"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:backgroundTint="@color/light_gray"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_commit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/pass_btn_login"
                style="@style/AppTheme.WithoutActionBar.TextViewWhite"
                android:text="@string/register"
                android:textColor="@color/dark_green"
                android:textStyle="bold"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>


    </LinearLayout>



</android.support.constraint.ConstraintLayout>