<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.NodeDialogActivity">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_height"
            android:orientation="horizontal"
            >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:padding="@dimen/padding">

            <Button

                android:id="@+id/btnDeleteAll"
                style="@style/AppTheme.WithoutActionBar.TextViewWhite"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/padding"
                android:background="@drawable/selector_button_corlor_primary"
                android:text="@string/delete_all"
                android:textStyle="bold" />

            <Button

                android:id="@+id/btnCancle"
                style="@style/AppTheme.WithoutActionBar.TextViewWhite"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:background="@drawable/selector_button_corlor_primary"
                android:text="@string/cancle"
                android:textStyle="bold" />

            <Button

                android:id="@+id/btnLogin"
                style="@style/AppTheme.WithoutActionBar.TextViewWhite"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/padding"
                android:background="@drawable/selector_button_login"
                android:text="@string/commit"
                android:textStyle="bold" />

        </LinearLayout>



        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

        <RelativeLayout
            android:id="@+id/layout_not_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/qry_count"
                style="@style/AppTheme.WithoutActionBar.TextViewWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="ไม่มีตัวเลือกโน้ตสำหรับรายการนี้"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_view_size_big"
                android:layout_marginRight="@dimen/text_view_size"
                android:layout_marginLeft="@dimen/text_view_size"/>

        </RelativeLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>