<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/barSizeTitlebar"
            android:theme="@style/AppTheme.WithoutActionBar.AppBarOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/btn_back"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@color/mint">

                    <com.JummumCo.Jummum.CustomView.TextAwesome
                        android:textSize="@dimen/icon_tab_size"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fa_angle_left"
                        android:layout_centerInParent="true"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/title_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.WithoutActionBar.TextViewWhite"
                    android:layout_centerVertical="true"
                    android:text="@string/forgetPassword"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_view_size_big"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold" />


            </RelativeLayout>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding"
            android:padding="@dimen/padding"
            android:background="@color/ef_white">

            <TextView
                android:id="@+id/txt_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.WithoutActionBar.TextViewWhite"
                android:layout_centerVertical="true"
                android:text="@string/forgetPasswordDesc"
                android:textColor="@color/dark_gray"
                android:layout_marginTop="@dimen/padding"
                android:textSize="@dimen/text_view_size_big"
                android:layout_centerHorizontal="true" />


            <EditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_edit_text_default"
                android:paddingLeft="8dp"
                android:layout_marginTop="@dimen/padding"
                android:maxLines="1"
                android:lines="1"
                android:hint="@string/username_lb"
                android:textSize="18sp"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:layout_below="@id/txt_desc"/>



            <RelativeLayout
                android:id="@+id/layout_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_commit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/mint"
                    style="@style/AppTheme.WithoutActionBar.TextViewWhite"
                    android:text="@string/forgetPassword"
                    android:textColor="@color/dark_green"
                    android:textStyle="bold"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>
        </LinearLayout>




    </LinearLayout>



</android.support.constraint.ConstraintLayout>